Added sorting, facets, and complex queries.